--- a/index.html
+++ b/index.html
@@ -1034,11 +1034,11 @@
                 }
             },
             "S1オスナ": {
-                "type": "野手", "stat1": 73, "stat2": 76, "stat3": 54, "spirits": 4900, "abilities": ["超ライドラ", "フルスイング", "チャンス"], "battingSide": "右",
+                "type": "野手", "stat1": 73, "stat2": 76, "stat3": 56, "spirits": 4900, "abilities": ["超ライドラ", "フルスイング", "チャンス"], "battingSide": "右",
                 "mainPosition": {
                     "name": "一塁手",
                     "適性": 61
-                }, "fielding": { "捕球": 54, "スローイング": 54, "肩力": 78 },
+                }, "fielding": { "捕球": 51, "スローイング": 53, "肩力": 78 },
                 "subPositions": [] // 明示的に空配列を追加
 
             },
@@ -1525,7 +1525,7 @@
             },
 
             "S1小澤怜司": {
-                "type": "投手", "stat1": 75, "stat2": 71, "stat3": 72, "spirits": 4900, "abilities": ["超ノビ", "緩急", "対ピンチ"], "bPitchCount": 1, "mainPosition": { "name": "抑え" }, // 主ポジション: 先発
+                "type": "投手", "stat1": 75, "stat2": 71, "stat3": 72, "spirits": 4900, "abilities": ["超ノビ", "緩急", "対ランナー"], "bPitchCount": 1, "mainPosition": { "name": "抑え" }, // 主ポジション: 先発
                 "subPositions": [
                     { "name": "中継ぎ" }, { "name": "先発" }// 副ポジション: 中継ぎ
                 ]
