--- a/index.html
+++ b/index.html
@@ -1553,10 +1553,7 @@
             },
 
             "覚醒中村優斗": {
-                "type": "投手", "stat1": 70, "stat2": 65, "stat3": 63, "spirits": 4800, "abilities": ["超キレ", "援護", "ノビ"], "bPitchCount": 0, "mainPosition": { "name": "先発" }, // 主ポジション: 先発
-                "subPositions": [
-                    { "name": "中継ぎ" } // 副ポジション: 中継ぎ
-                ]
+                "type": "投手", "stat1": 70, "stat2": 61, "stat3": 71, "spirits": 4800, "abilities": ["超豪速球", "奪三振", "キレ"], "bPitchCount": 0, "mainPosition": { "name": "先発" }
             },
 
             "S1バウマン": {
