--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,7 @@
 
 
             "覚醒矢崎拓也": {
-                "type": "投手", "stat1": 75, "stat2": 59, "stat3": 67, "spirits": 4800, "abilities": ["超ノビ", "キレ", "対ピンチ"], "bPitchCount": 1, "mainPosition": { "name": "抑え" }, // 主ポジション: 先発
+                "type": "投手", "stat1": 73, "stat2": 60, "stat3": 69, "spirits": 4800, "abilities": ["超キレ", "ノビ", "打たれ強さ"], "bPitchCount": 1, "mainPosition": { "name": "抑え" }, // 主ポジション: 先発
                 "subPositions": [
                     { "name": "中継ぎ" } // 副ポジション: 中継ぎ
                 ]
