--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
 
                 <tr>
                     <td> </td>
-                    <td bgcolor="blueviolet"> 代打 </td>
+                    <td bgcolor="blueviolet"> 代 </td>
                     <td><select class="player">
                             <option value="">野手を選択</option>
                         </select></td>
@@ -678,57 +678,7 @@
 
                 <tr>
                     <td> </td>
-                    <td bgcolor="blueviolet"> 代打 </td>
-                    <td><select class="player">
-                            <option value="">野手を選択</option>
-                        </select></td>
-                    <td class="stat" data-base="0"></td>
-                    <td class="stat" data-base="0"></td>
-                    <td class="stat" data-base="0"></td>
-                    <td><select class="title">
-                            <option value="0,0,0,0,0">なし</option>
-                        </select></td>
-                    <td class="spirits" data-base="0">0</td>
-                    <!-- 折りたたみトグルボタン -->
-                    <td>
-                        <button class="toggle-tokushu">特守実行</button>
-                    </td>
-
-                    <!-- アコーディオン対象 -->
-                    <td colspan="5">
-                        <div class="tokushu-wrapper" style="display: none;">
-                            <div class="tokushu-control">メイン
-                                <button class="minus-btn">-</button>
-                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
-                                <button class="plus-btn">+</button>
-                            </div>
-                            <div class="tokushu-control">捕球
-                                <button class="minus-btn">-</button>
-                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
-                                <button class="plus-btn">+</button>
-                            </div>
-                            <div class="tokushu-control">スローイング
-                                <button class="minus-btn">-</button>
-                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
-                                <button class="plus-btn">+</button>
-                            </div>
-                            <div class="tokushu-control">肩力
-                                <button class="minus-btn">-</button>
-                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
-                                <button class="plus-btn">+</button>
-                            </div>
-                            <div class="tokushu-control">サブポジ
-                                <button class="minus-btn">-</button>
-                                <input type="number" class="tokushu-input" min="0" max="1" value="0" readonly>
-                                <button class="plus-btn">+</button>
-                            </div>
-                        </div>
-                    </td>
-
-
-                <tr>
-                    <td> </td>
-                    <td bgcolor="blueviolet"> 代打 </td>
+                    <td bgcolor="blueviolet"> 代 </td>
                     <td><select class="player">
                             <option value="">野手を選択</option>
                         </select></td>
@@ -778,7 +728,57 @@
 
                 <tr>
                     <td> </td>
-                    <td bgcolor="blueviolet"> 代打 </td>
+                    <td bgcolor="blueviolet"> 代 </td>
+                    <td><select class="player">
+                            <option value="">野手を選択</option>
+                        </select></td>
+                    <td class="stat" data-base="0"></td>
+                    <td class="stat" data-base="0"></td>
+                    <td class="stat" data-base="0"></td>
+                    <td><select class="title">
+                            <option value="0,0,0,0,0">なし</option>
+                        </select></td>
+                    <td class="spirits" data-base="0">0</td>
+                    <!-- 折りたたみトグルボタン -->
+                    <td>
+                        <button class="toggle-tokushu">特守実行</button>
+                    </td>
+
+                    <!-- アコーディオン対象 -->
+                    <td colspan="5">
+                        <div class="tokushu-wrapper" style="display: none;">
+                            <div class="tokushu-control">メイン
+                                <button class="minus-btn">-</button>
+                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
+                                <button class="plus-btn">+</button>
+                            </div>
+                            <div class="tokushu-control">捕球
+                                <button class="minus-btn">-</button>
+                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
+                                <button class="plus-btn">+</button>
+                            </div>
+                            <div class="tokushu-control">スローイング
+                                <button class="minus-btn">-</button>
+                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
+                                <button class="plus-btn">+</button>
+                            </div>
+                            <div class="tokushu-control">肩力
+                                <button class="minus-btn">-</button>
+                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
+                                <button class="plus-btn">+</button>
+                            </div>
+                            <div class="tokushu-control">サブポジ
+                                <button class="minus-btn">-</button>
+                                <input type="number" class="tokushu-input" min="0" max="1" value="0" readonly>
+                                <button class="plus-btn">+</button>
+                            </div>
+                        </div>
+                    </td>
+
+
+                <tr>
+                    <td> </td>
+                    <td bgcolor="blueviolet"> 代 </td>
                     <td><select class="player">
                             <option value="">野手を選択</option>
                         </select></td>
