--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li>ポジションに応じて選手が選択できます。ポジション外では選択できません。</li>
             <li>選手を選択するとステータスが自動で表示されます。</li>
             <li>称号を選ぶとステータスが変化します。</li>
-            <li>特守を押すと補正項目を設定できます。特守によってスピリッツが11上昇する場合はサブポジを1から0に戻してください</li>
+            <li>特守数値を押すと補正項目の変更ができます。特守によってスピリッツが11上昇する場合はサブポジを1から0に戻してください</li>
             <li>選手は名前順に並べています。レアリティはS1→覚醒→セレクション→TSの順に並べています。</li>
 
         </ol>
@@ -49,7 +49,7 @@
                     <th>走</th>
                     <th>称号</th>
                     <th>スピ</th>
-                    <th>特守</th>
+                    <th>特守数値</th>
                     <th>特守詳細</th>
 
                 </tr>
@@ -85,7 +85,7 @@
                     <td class="spirits" data-base="0">0</td>
                     <!-- 折りたたみトグルボタン -->
                     <td>
-                        <button class="toggle-tokushu">特守実行</button>
+                        <button class="toggle-tokushu">Edit</button>
                     </td>
 
                     <!-- アコーディオン対象 -->
@@ -148,7 +148,7 @@
                     <td class="spirits" data-base="0">0</td>
                     <!-- 折りたたみトグルボタン -->
                     <td>
-                        <button class="toggle-tokushu">特守実行</button>
+                        <button class="toggle-tokushu">Edit</button>
                     </td>
 
                     <!-- アコーディオン対象 -->
@@ -211,7 +211,7 @@
                     <td class="spirits" data-base="0">0</td>
                     <!-- 折りたたみトグルボタン -->
                     <td>
-                        <button class="toggle-tokushu">特守実行</button>
+                        <button class="toggle-tokushu">Edit</button>
                     </td>
 
                     <!-- アコーディオン対象 -->
@@ -274,7 +274,7 @@
                     <td class="spirits" data-base="0">0</td>
                     <!-- 折りたたみトグルボタン -->
                     <td>
-                        <button class="toggle-tokushu">特守実行</button>
+                        <button class="toggle-tokushu">Edit</button>
                     </td>
 
                     <!-- アコーディオン対象 -->
@@ -337,7 +337,7 @@
                     <td class="spirits" data-base="0">0</td>
                     <!-- 折りたたみトグルボタン -->
                     <td>
-                        <button class="toggle-tokushu">特守実行</button>
+                        <button class="toggle-tokushu">Edit</button>
                     </td>
 
                     <!-- アコーディオン対象 -->
@@ -402,7 +402,7 @@
                     <td class="spirits" data-base="0">0</td>
                     <!-- 折りたたみトグルボタン -->
                     <td>
-                        <button class="toggle-tokushu">特守実行</button>
+                        <button class="toggle-tokushu">Edit</button>
                     </td>
 
                     <!-- アコーディオン対象 -->
@@ -465,7 +465,7 @@
                     <td class="spirits" data-base="0">0</td>
                     <!-- 折りたたみトグルボタン -->
                     <td>
-                        <button class="toggle-tokushu">特守実行</button>
+                        <button class="toggle-tokushu">Edit</button>
                     </td>
 
                     <!-- アコーディオン対象 -->
@@ -529,7 +529,7 @@
                     <td class="spirits" data-base="0">0</td>
                     <!-- 折りたたみトグルボタン -->
                     <td>
-                        <button class="toggle-tokushu">特守実行</button>
+                        <button class="toggle-tokushu">Edit</button>
                     </td>
 
                     <!-- アコーディオン対象 -->
@@ -593,7 +593,7 @@
                     <td class="spirits" data-base="0">0</td>
                     <!-- 折りたたみトグルボタン -->
                     <td>
-                        <button class="toggle-tokushu">特守実行</button>
+                        <button class="toggle-tokushu">Edit</button>
                     </td>
 
                     <!-- アコーディオン対象 -->
@@ -642,7 +642,7 @@
                     <td class="spirits" data-base="0">0</td>
                     <!-- 折りたたみトグルボタン -->
                     <td>
-                        <button class="toggle-tokushu">特守実行</button>
+                        <button class="toggle-tokushu">Edit</button>
                     </td>
 
                     <!-- アコーディオン対象 -->
@@ -691,57 +691,7 @@
                     <td class="spirits" data-base="0">0</td>
                     <!-- 折りたたみトグルボタン -->
                     <td>
-                        <button class="toggle-tokushu">特守実行</button>
-                    </td>
-
-                    <!-- アコーディオン対象 -->
-                    <td colspan="5">
-                        <div class="tokushu-wrapper" style="display: none;">
-                            <div class="tokushu-control">メイン
-                                <button class="minus-btn">-</button>
-                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
-                                <button class="plus-btn">+</button>
-                            </div>
-                            <div class="tokushu-control">捕球
-                                <button class="minus-btn">-</button>
-                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
-                                <button class="plus-btn">+</button>
-                            </div>
-                            <div class="tokushu-control">スローイング
-                                <button class="minus-btn">-</button>
-                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
-                                <button class="plus-btn">+</button>
-                            </div>
-                            <div class="tokushu-control">肩力
-                                <button class="minus-btn">-</button>
-                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
-                                <button class="plus-btn">+</button>
-                            </div>
-                            <div class="tokushu-control">サブポジ
-                                <button class="minus-btn">-</button>
-                                <input type="number" class="tokushu-input" min="0" max="1" value="0" readonly>
-                                <button class="plus-btn">+</button>
-                            </div>
-                        </div>
-                    </td>
-
-
-                <tr>
-                    <td> </td>
-                    <td bgcolor="blueviolet"> 代 </td>
-                    <td><select class="player">
-                            <option value="">野手を選択</option>
-                        </select></td>
-                    <td class="stat" data-base="0"></td>
-                    <td class="stat" data-base="0"></td>
-                    <td class="stat" data-base="0"></td>
-                    <td><select class="title">
-                            <option value="0,0,0,0,0">なし</option>
-                        </select></td>
-                    <td class="spirits" data-base="0">0</td>
-                    <!-- 折りたたみトグルボタン -->
-                    <td>
-                        <button class="toggle-tokushu">特守実行</button>
+                        <button class="toggle-tokushu">Edit</button>
                     </td>
 
                     <!-- アコーディオン対象 -->
@@ -791,7 +741,57 @@
                     <td class="spirits" data-base="0">0</td>
                     <!-- 折りたたみトグルボタン -->
                     <td>
-                        <button class="toggle-tokushu">特守実行</button>
+                        <button class="toggle-tokushu">Edit</button>
+                    </td>
+
+                    <!-- アコーディオン対象 -->
+                    <td colspan="5">
+                        <div class="tokushu-wrapper" style="display: none;">
+                            <div class="tokushu-control">メイン
+                                <button class="minus-btn">-</button>
+                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
+                                <button class="plus-btn">+</button>
+                            </div>
+                            <div class="tokushu-control">捕球
+                                <button class="minus-btn">-</button>
+                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
+                                <button class="plus-btn">+</button>
+                            </div>
+                            <div class="tokushu-control">スローイング
+                                <button class="minus-btn">-</button>
+                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
+                                <button class="plus-btn">+</button>
+                            </div>
+                            <div class="tokushu-control">肩力
+                                <button class="minus-btn">-</button>
+                                <input type="number" class="tokushu-input" min="0" max="2" value="0" readonly>
+                                <button class="plus-btn">+</button>
+                            </div>
+                            <div class="tokushu-control">サブポジ
+                                <button class="minus-btn">-</button>
+                                <input type="number" class="tokushu-input" min="0" max="1" value="0" readonly>
+                                <button class="plus-btn">+</button>
+                            </div>
+                        </div>
+                    </td>
+
+
+                <tr>
+                    <td> </td>
+                    <td bgcolor="blueviolet"> 代 </td>
+                    <td><select class="player">
+                            <option value="">野手を選択</option>
+                        </select></td>
+                    <td class="stat" data-base="0"></td>
+                    <td class="stat" data-base="0"></td>
+                    <td class="stat" data-base="0"></td>
+                    <td><select class="title">
+                            <option value="0,0,0,0,0">なし</option>
+                        </select></td>
+                    <td class="spirits" data-base="0">0</td>
+                    <!-- 折りたたみトグルボタン -->
+                    <td>
+                        <button class="toggle-tokushu">Edit</button>
                     </td>
 
                     <!-- アコーディオン対象 -->
@@ -1928,7 +1928,7 @@
                     if (wrapper) {
                         const isOpen = wrapper.style.display === "block";
                         wrapper.style.display = isOpen ? "none" : "block";
-                        button.textContent = isOpen ? "特守実行" : "終了";
+                        button.textContent = isOpen ? "Edit" : "Close";
                     }
                 });
             });
