--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
         </ol>
     </div>
 
+
+
+
+
+
+
+
+
+
+
+
     <div class="container">
 
         <table id="fielders-table" border="1">
@@ -1041,6 +1052,12 @@
     <p>コンボの計算は以下のサイトを参考にしています。<a href="https://proace.info/COMBO/" target="_blank" rel="noopener noreferrer">
             プロスピA攻略|なにしてんねんデータベース様</a></p>
 
+
+    <p>セレクション茂木選手のステータス予想のアンケートを行っています！<a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSdOAnDwnlWdYs7y3-JGtjLycmtxb0YNpDndT4zWo1v8HnjlnQ/viewform?embedded=true"
+            target="_blank" rel="noopener noreferrer">
+            Google formで集計しています</a></p>
+
     <p>TS候補は以下のサイトで参照できます。</p>
 
     <iframe class="note-embed" src="https://note.com/embed/notes/n95d5247a8ac7"
@@ -1396,7 +1413,7 @@
             },
 
             "セレ茂木栄五郎": {
-                "type": "野手", "stat1": 75, "stat2": 74, "stat3": 75, "spirits": 5000, "abilities": ["超ライドラ", "走塁", "広角"], "battingSide": "左",
+                "type": "野手", "stat1": 74, "stat2": 74, "stat3": 76, "spirits": 5000, "abilities": ["超ライドラ", "走塁", "初球"], "battingSide": "左",
                 "mainPosition": {
                     "name": "三塁手",
                     "適性": 66
@@ -1909,6 +1926,8 @@
                 { text: "丁寧な投球(球威-1,制球+2)", value: "-1,2,0,0,0" }
             ]
         };
+
+
 
         document.getElementById("usage-toggle").addEventListener("click", function () {
             const content = document.getElementById("usage-content");
