--- a/index.html
+++ b/index.html
@@ -1846,6 +1846,14 @@
                 ]
             },
 
+             "TS原樹理": {
+                "type": "投手", "stat1": 75, "stat2": 74, "stat3": 75, "spirits": 4900, "abilities": ["超キレ", "援護", "対ランナー"], "bPitchCount": 1, "mainPosition": { "name": "先" }, // 主ポジション: 先
+                "subPositions": [
+                    { "name": "継" } // 副ポジション: 継
+                ]
+            },
+
+
             "TS山本哲哉": {
                 "type": "投手", "stat1": 73, "stat2": 70, "stat3": 65, "spirits": 4900, "abilities": ["超対ピンチ", "キレ", "打たれ強さ"], "bPitchCount": 1, "mainPosition": { "name": "継" }, // 主ポジション: 先
                 "subPositions": [
