--- a/index.html
+++ b/index.html
@@ -1677,7 +1677,12 @@
             },
 
             "S1奥川恭伸": {
-                "type": "投手", "stat1": 73, "stat2": 75, "stat3": 75, "spirits": 4900, "abilities": ["超奪三振", "キレ", "援護"], "bPitchCount": 1, "mainPosition": { "name": "先" }
+                "type": "投手", "stat1": 73, "stat2": 75, "stat3": 75, "spirits": 4900, "abilities": ["超奪三振", "キレ", "援護"], "bPitchCount": 1, "mainPosition": { "name": "先" },
+                "subPositions": [
+                    { "name": "継" }
+                ]
+        
+
             },
 
 
