--- a/index.html
+++ b/index.html
@@ -2509,12 +2509,12 @@
             }
 
             // 特定選手コンボ
-            if (selectedPlayers.includes("すぽると！山野太一")) { comboTotal += 630; activatedCombos.push("すぽると！ (+630)"); }
+            
             if (selectedPlayers.includes("アニバサンタナ") || selectedPlayers.includes("アニバ山田哲人")) {
                 comboTotal += 630;
                 activatedCombos.push("オートグラフ (+630)");
             }
-            if (selectedPlayers.includes("EX長岡秀樹") || selectedPlayers.includes("EXオスナ") || selectedPlayers.includes("EX大西広樹") || selectedPlayers.includes("EX高橋圭二")) {
+            if (selectedPlayers.includes("EX村上宗隆")  || selectedPlayers.includes("EX大西広樹")) {
                 comboTotal += 630;
                 activatedCombos.push("熱狂の渦 (+630)");
             }
