--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <b>
-        <font size="5" color="red">オーダーシュミレータ</font>
+        <font size="5" color="red">オーダーシミュレーター</font>
         <br>
 
     </b>
