--- a/index.html
+++ b/index.html
@@ -1447,6 +1447,25 @@
                 }
             },
 
+            "セレ北村拓己": {
+                "type": "野手", "stat1": 75, "stat2": 71, "stat3": 65, "spirits": 5000, "abilities": ["超ライドラ", "走塁", "逆境"], "battingSide": "左",
+                "mainPosition": {
+                    "name": "遊撃手",
+                    "適性": 62
+                },
+                "subPositions": [
+                    { "name": "二撃手", "適性": 67 },
+                    { "name": "三撃手", "適性": 67},
+                    { "name": "一塁手", "適性": 57 }
+
+                ],
+                "fielding": {
+                    "捕球": 51,
+                    "スローイング": 50,
+                    "肩力": 48
+                }
+            },
+
             "EX村上宗隆": {
                 "type": "野手", "stat1": 79, "stat2": 85, "stat3": 72, "spirits": 4900, "abilities": ["超アーチ", "広角", "熱気"], "battingSide": "左",
                 "mainPosition": {
@@ -2545,7 +2564,7 @@
 
 
             // 選ばれしき者の輝き
-            if (selectedPlayers.includes("セレ石山泰稚") || selectedPlayers.includes("セレ小川泰弘") || selectedPlayers.includes("セレ荘司宏太") || selectedPlayers.includes("セレサンタナ") || selectedPlayers.includes("セレ茂木栄五郎")) {
+            if (selectedPlayers.includes("セレ石山泰稚") || selectedPlayers.includes("セレ小川泰弘") || selectedPlayers.includes("セレ荘司宏太") || selectedPlayers.includes("セレサンタナ") || selectedPlayers.includes("セレ茂木栄五郎")|| selectedPlayers.includes("セレ北村拓己")) {
                 comboTotal += 600;
                 activatedCombos.push("選ばれしき者の輝き (+600)");
                 console.log("選ばれしき者の輝き (+600)");
