--- a/index.html
+++ b/index.html
@@ -1448,7 +1448,7 @@
             },
 
             "セレ北村拓己": {
-                "type": "野手", "stat1": 75, "stat2": 71, "stat3": 65, "spirits": 5000, "abilities": ["超ライドラ", "走塁", "逆境"], "battingSide": "左",
+                "type": "野手", "stat1": 75, "stat2": 71, "stat3": 65, "spirits": 5000, "abilities": ["超ライドラ", "走塁", "逆境"], "battingSide": "右",
                 "mainPosition": {
                     "name": "遊撃手",
                     "適性": 62
