--- a/index.html
+++ b/index.html
@@ -1447,16 +1447,16 @@
                 }
             },
 
-            "セレ北村拓己": {
-                "type": "野手", "stat1": 75, "stat2": 71, "stat3": 65, "spirits": 5000, "abilities": ["超ライドラ", "走塁", "逆境"], "battingSide": "右",
+             "セレ北村拓己": {
+                "type": "野手", "stat1": 73, "stat2": 70, "stat3": 65, "spirits": 5000, "abilities": ["超粘りうち", "逆境", "ライドラ"], "battingSide": "右",
                 "mainPosition": {
                     "name": "遊撃手",
-                    "適性": 62
+                    "適性": 63
                 },
                 "subPositions": [
-                    { "name": "二撃手", "適性": 67 },
-                    { "name": "三撃手", "適性": 67},
-                    { "name": "一塁手", "適性": 57 }
+                    { "name": "一塁手", "適性": 57 },
+                    { "name": "二塁手", "適性": 67 },
+                    { "name": "三塁手", "適性": 67 }
 
                 ],
                 "fielding": {
