--- a/index.html
+++ b/index.html
@@ -1782,7 +1782,10 @@
 
 
             "S1山本大貴": {
-                "type": "投手", "stat1": 77, "stat2": 61, "stat3": 63, "spirits": 4900, "abilities": ["超キレ", "奪三振", "球持ち"], "bPitchCount": 2, "mainPosition": { "name": "継" }
+                "type": "投手", "stat1": 77, "stat2": 61, "stat3": 63, "spirits": 4900, "abilities": ["超グランドボーラー", "対ピンチ", "キレ"], "bPitchCount": 2, "mainPosition": { "name": "継" },
+                "subPositions": [
+                    { "name": "抑" } // 副ポジション: 継
+                ]
             },
 
             "S1吉村貢司郎": {
