--- a/index.html
+++ b/index.html
@@ -1412,6 +1412,13 @@
                 "subPositions": [] // 明示的に空配列を追加
             },
 
+            "松井秀喜セレ古田敦也": {
+                "type": "野手", "stat1": 80, "stat2": 78, "stat3": 67, "spirits": 4900,
+                "abilities": ["超捕手", "アベレージヒッター", "チャンス"], "battingSide": "右",
+                "mainPosition": { "name": "捕手", "適性": 89 },
+                "fielding": { "捕球": 78, "スローイング": 85, "肩力": 94 },
+                "subPositions": [] // 明示的に空配列を追加
+            },
             "セレ茂木栄五郎": {
                 "type": "野手", "stat1": 74, "stat2": 74, "stat3": 76, "spirits": 5000, "abilities": ["超ライドラ", "走塁", "初球"], "battingSide": "左",
                 "mainPosition": {
