--- a/index.html
+++ b/index.html
@@ -1053,10 +1053,7 @@
             プロスピA攻略|なにしてんねんデータベース様</a></p>
 
 
-    <p>セレクション茂木選手のステータス予想のアンケートを行っています！<a
-            href="https://docs.google.com/forms/d/e/1FAIpQLSdOAnDwnlWdYs7y3-JGtjLycmtxb0YNpDndT4zWo1v8HnjlnQ/viewform?embedded=true"
-            target="_blank" rel="noopener noreferrer">
-            Google formで集計しています</a></p>
+    
 
     <p>TS候補は以下のサイトで参照できます。</p>
 
@@ -1412,8 +1409,8 @@
                 "subPositions": [] // 明示的に空配列を追加
             },
 
-            "松井秀喜セレ古田敦也": {
-                "type": "野手", "stat1": 80, "stat2": 78, "stat3": 67, "spirits": 4900,
+            "セレ古田敦也": {
+                "type": "野手", "stat1": 81, "stat2": 79, "stat3": 67, "spirits": 4900,
                 "abilities": ["超捕手", "アベレージヒッター", "チャンス"], "battingSide": "右",
                 "mainPosition": { "name": "捕手", "適性": 89 },
                 "fielding": { "捕球": 78, "スローイング": 85, "肩力": 94 },
