--- a/index.html
+++ b/index.html
@@ -1264,10 +1264,10 @@
             },
 
             "S1西川遥輝": {
-                "type": "野手", "stat1": 67, "stat2": 64, "stat3": 85, "spirits": 4900, "abilities": ["超選球眼", "盗塁", "固め打ち"], "battingSide": "左",
+                "type": "野手", "stat1": 66, "stat2": 64, "stat3": 85, "spirits": 4900, "abilities": ["超選球眼", "ラインドライブ", "粘りうち"], "battingSide": "左",
                 "mainPosition": {
                     "name": "中堅手",
-                    "適性": 62
+                    "適性": 61
                 },
                 "subPositions": [
                     { "name": "左翼手", "適性": 64 },
@@ -1797,7 +1797,7 @@
             },
 
             "S1ランバート": {
-                "type": "投手", "stat1": 66, "stat2": 63, "stat3": 66, "spirits": 4900, "abilities": ["超打たれ強さ", "重い球", "キレ"], "bPitchCount": 0, "mainPosition": { "name": "先" }
+                "type": "投手", "stat1": 70, "stat2": 70, "stat3": 70, "spirits": 4900, "abilities": ["超キレ", "打たれ強さ", "奥行き"], "bPitchCount": 0, "mainPosition": { "name": "先" }
             },
 
 
