--- a/index.html
+++ b/index.html
@@ -1178,6 +1178,14 @@
                     "肩力": 48
                 }
             },
+            "S1古賀優大": {
+                "type": "野手", "stat1": 61, "stat2": 59, "stat3": 61, "spirits": 4900, "abilities": ["超捕手", "対左投手", "チャンメ"], "battingSide": "右",
+                "mainPosition": {
+                    "name": "捕手",
+                    "適性": 61
+                }, "fielding": { "捕球": 45, "スローイング": 62, "肩力": 77 },
+                "subPositions": [] // 明示的に空配列を追加
+            },
 
             "S1澤井廉": {
                 "type": "野手", "stat1": 56, "stat2": 63, "stat3": 62, "spirits": 4900, "abilities": ["超初球", "粘りうち", "流し打ち"], "battingSide": "左",
