--- a/index.html
+++ b/index.html
@@ -1762,9 +1762,7 @@
 
 
 
-            "S1バウマン": {
-                "type": "投手", "stat1": 75, "stat2": 63, "stat3": 70, "spirits": 4900, "abilities": ["超豪速球", "ノビ", "荒れ球"], "bPitchCount": 1, "mainPosition": { "name": "抑" }
-            },
+            
 
 
             "S1長谷川宙輝": {
@@ -1811,6 +1809,9 @@
 
             "覚醒中村優斗": {
                 "type": "投手", "stat1": 70, "stat2": 61, "stat3": 71, "spirits": 4800, "abilities": ["超豪速球", "奪三振", "キレ"], "bPitchCount": 0, "mainPosition": { "name": "先" }
+            },
+            "覚醒バウマン": {
+                "type": "投手", "stat1": 71, "stat2": 55, "stat3": 59, "spirits": 4800, "abilities": ["超豪速球", "ノビ", "奪三振"], "bPitchCount": 2, "mainPosition": { "name": "継" }
             },
 
 
