--- a/index.html
+++ b/index.html
@@ -1205,20 +1205,12 @@
             },
 
             "S1サンタナ": {
-                "type": "野手", "stat1": 81, "stat2": 80, "stat3": 63, "spirits": 4900, "abilities": ["超広角", "ライドラ", "対左投手"], "battingSide": "右",
+                "type": "野手", "stat1": 80, "stat2": 79, "stat3": 63, "spirits": 4900, "abilities": ["超広角", "ライドラ", "アベヒ"], "battingSide": "右",
                 "mainPosition": {
                     "name": "左翼手",
                     "適性": 48
-                },
-                "subPositions": [
-                    { "name": "右翼手", "適性": 54 }
-
-                ],
-                "fielding": {
-                    "捕球": 38,
-                    "スローイング": 45,
-                    "肩力": 75
-                }
+                        }, "fielding": { "捕球": 38, "スローイング": 45, "肩力": 75 },
+                "subPositions": [] // 明示的に空配列を追加
             },
 
             "S1塩見泰隆": {
@@ -1427,22 +1419,13 @@
             
 
             "セレサンタナ": {
-                "type": "野手", "stat1": 82, "stat2": 81, "stat3": 64, "spirits": 5000, "abilities": ["超広角", "ライドラ", "対左投手"], "battingSide": "右",
+                "type": "野手", "stat1": 81, "stat2": 80, "stat3": 64, "spirits": 5000, "abilities": ["超広角", "ライドラ", "アベヒ"], "battingSide": "右",
                 "mainPosition": {
                     "name": "左翼手",
                     "適性": 48
-                },
-                "subPositions": [
-                    { "name": "右翼手", "適性": 50 }
-
-                ],
-                "fielding": {
-                    "捕球": 38,
-                    "スローイング": 45,
-                    "肩力": 75
-                }
+                        }, "fielding": { "捕球": 38, "スローイング": 45, "肩力": 75 },
+                "subPositions": [] // 明示的に空配列を追加
             },
-
             
 
             "EX村上宗隆": {
