--- a/index.html
+++ b/index.html
@@ -1500,6 +1500,25 @@
                 }
             },
 
+             "TS川端慎吾": {
+                "type": "野手", "stat1": 83, "stat2": 68, "stat3": 74, "spirits": 4900, "abilities": ["超アベヒ", "流し打ち", "固め打ち"], "battingSide": "左",
+                "mainPosition": {
+                    "name": "三塁手",
+                    "適性": 60
+                },
+                "subPositions": [
+                    { "name": "一塁手", "適性": 51 },
+                    { "name": "二撃手", "適性": 47 },
+                    { "name": "遊撃手", "適性": 57 }
+
+                ],
+                "fielding": {
+                    "捕球": 50,
+                    "スローイング": 53,
+                    "肩力": 58
+                }
+            },
+
             "TS塩見泰隆": {
                 "type": "野手", "stat1": 80, "stat2": 75, "stat3": 83, "spirits": 4900, "abilities": ["超広角", "チャンメ", "盗塁"], "battingSide": "右",
                 "mainPosition": {
