--- a/index.html
+++ b/index.html
@@ -1508,7 +1508,7 @@
                 },
                 "subPositions": [
                     { "name": "一塁手", "適性": 51 },
-                    { "name": "二撃手", "適性": 47 },
+                    { "name": "二塁手", "適性": 47 },
                     { "name": "遊撃手", "適性": 57 }
 
                 ],
