--- a/index.html
+++ b/index.html
@@ -1798,6 +1798,14 @@
                 ]
             },
 
+                 "セレ小川泰弘": {
+                "type": "投手", "stat1": 74, "stat2": 74, "stat3": 76, "spirits": 5000, "abilities": ["超コントロール", "球持ち", "キレ"], "bPitchCount": 0, "mainPosition": { "name": "先" },
+                "subPositions": [
+                    { "name": "継" }, { "name": "抑" }
+                ]
+
+            },
+
             
             "EX大西広樹": {
                 "type": "投手", "stat1": 74, "stat2": 80, "stat3": 68, "spirits": 4900, "abilities": ["超対ピンチ", "グラウンドボーラー", "熱気"], "bPitchCount": 1, "mainPosition": { "name": "継" }
@@ -2530,7 +2538,7 @@
 
 
             // 選ばれしき者の輝き
-            if (selectedPlayers.includes("セレサンタナ") || selectedPlayers.includes("セレ木澤尚文")) {
+            if (selectedPlayers.includes("セレサンタナ") || selectedPlayers.includes("セレ木澤尚文")|| selectedPlayers.includes("セレ小川泰弘")) {
                 comboTotal += 600;
                 activatedCombos.push("選ばれしき者の輝き (+600)");
                 console.log("選ばれしき者の輝き (+600)");
@@ -2565,7 +2573,7 @@
             }
 
             // 時を超えた活躍
-            if (selectedPlayers.includes("TS田中浩康") || selectedPlayers.includes("TS山本哲也") || selectedPlayers.includes("TS石川雅規") || selectedPlayers.includes("TS相川亮二") || selectedPlayers.includes("TS塩見泰隆") || selectedPlayers.includes("TS稲葉篤紀") || selectedPlayers.includes("TS福地寿樹") || selectedPlayers.includes("TS土橋勝征") || selectedPlayers.includes("TS吉井理人") || selectedPlayers.includes("TS由規") || selectedPlayers.includes("TS山田哲人") || selectedPlayers.includes("TS山崎晃大朗") || selectedPlayers.includes("TS池山隆寛") || selectedPlayers.includes("TS伊藤智仁") || selectedPlayers.includes("TS高津臣吾") || selectedPlayers.includes("TS小川泰弘") || selectedPlayers.includes("TS石井久寿") || selectedPlayers.includes("TS雄平")) {
+            if (selectedPlayers.includes("TS田中浩康") || selectedPlayers.includes("TS山本哲也") || selectedPlayers.includes("TS石川雅規") || selectedPlayers.includes("TS相川亮二") || selectedPlayers.includes("TS塩見泰隆") || selectedPlayers.includes("TS稲葉篤紀") || selectedPlayers.includes("TS福地寿樹") || selectedPlayers.includes("TS土橋勝征") || selectedPlayers.includes("TS吉井理人") || selectedPlayers.includes("TS由規") || selectedPlayers.includes("TS山田哲人") || selectedPlayers.includes("TS山崎晃大朗") || selectedPlayers.includes("TS池山隆寛") || selectedPlayers.includes("TS伊藤智仁") || selectedPlayers.includes("TS高津臣吾") || selectedPlayers.includes("TS川端慎吾")|| selectedPlayers.includes("TS小川泰弘") || selectedPlayers.includes("TS石井久寿") || selectedPlayers.includes("TS雄平")) {
                 comboTotal += 70;
                 activatedCombos.push("時を超えた活躍 (+70)");
                 console.log("時を超えた活躍 (+70)");
