--- a/index.html
+++ b/index.html
@@ -1708,6 +1708,10 @@
                 "type": "投手", "stat1": 75, "stat2": 76, "stat3": 65, "spirits": 4900, "abilities": ["超対ピンチ", "キレ", "コントロール"], "bPitchCount": 1, "mainPosition": { "name": "継" }
             },
 
+            "S1荘司宏太": {
+                "type": "投手", "stat1": 73, "stat2": 67, "stat3": 65, "spirits": 4900, "abilities": ["奥行き", "キレ", "ノビ"], "bPitchCount": 0, "mainPosition": { "name": "継" }
+            },
+
 
             "S1高橋圭二": {
                 "type": "投手", "stat1": 76, "stat2": 68, "stat3": 74, "spirits": 4900, "abilities": ["超ノビ", "奪三振", "キレ"], "bPitchCount": 1, "mainPosition": { "name": "先" },
@@ -1799,7 +1803,7 @@
             },
 
                  "セレ小川泰弘": {
-                "type": "投手", "stat1": 74, "stat2": 74, "stat3": 76, "spirits": 5000, "abilities": ["超コントロール", "球持ち", "キレ"], "bPitchCount": 0, "mainPosition": { "name": "先" },
+                "type": "投手", "stat1": 76, "stat2": 74, "stat3": 76, "spirits": 5000, "abilities": ["超援護", "球持ち", "対ランナー"], "bPitchCount": 0, "mainPosition": { "name": "先" },
                 "subPositions": [
                     { "name": "継" }, { "name": "抑" }
                 ]
