--- a/index.html
+++ b/index.html
@@ -1105,13 +1105,13 @@
             },
 
             "S1内山壮真": {
-                "type": "野手", "stat1": 57, "stat2": 65, "stat3": 70, "spirits": 4900, "abilities": ["超チャンス", "粘りうち", "広角"], "battingSide": "右",
+                "type": "野手", "stat1": 67, "stat2": 65, "stat3": 70, "spirits": 4900, "abilities": ["超チャンス", "粘りうち", "広角"], "battingSide": "右",
                 "mainPosition": {
-                    "name": "捕手",
-                    "適性": 63
+                    "name": "左翼手",
+                    "適性": 58
                 },
                 "subPositions": [
-                    { "name": "左翼手", "適性": 58 },
+                    { "name": "捕手", "適性": 50 },
                     { "name": "中堅手", "適性": 55 },
                     { "name": "右翼手", "適性": 58 }
                 ],
