--- a/index.html
+++ b/index.html
@@ -2428,24 +2428,24 @@
                 };
 
                 // 条件付きコンボ（野手）
-                if (hitterCount["ミート"] >= 8) { comboTotal += 960; activatedCombos.push("超周到精密発動 (+960)"); }
-                else if (hitterCount["ミート"] >= 6) { comboTotal += 600; activatedCombos.push("周到精密発動 (+600)"); }
+                if (hitterCount["ミート"] >= 8) { comboTotal += 960; activatedCombos.push("超周到精密 (+960)"); }
+                else if (hitterCount["ミート"] >= 6) { comboTotal += 600; activatedCombos.push("周到精密 (+600)"); }
 
-                if (hitterCount["パワー"] >= 8) { comboTotal += 960; activatedCombos.push("超大胆不敵発動 (+960)"); }
-                else if (hitterCount["パワー"] >= 6) { comboTotal += 600; activatedCombos.push("大胆不敵発動 (+600)"); }
+                if (hitterCount["パワー"] >= 8) { comboTotal += 960; activatedCombos.push("超大胆不敵 (+960)"); }
+                else if (hitterCount["パワー"] >= 6) { comboTotal += 600; activatedCombos.push("大胆不敵 (+600)"); }
 
-                if (hitterCount["走力"] >= 8) { comboTotal += 960; activatedCombos.push("超疾風迅雷発動 (+960)"); }
-                else if (hitterCount["走力"] >= 6) { comboTotal += 600; activatedCombos.push("疾風迅雷発動 (+600)"); }
+                if (hitterCount["走力"] >= 8) { comboTotal += 960; activatedCombos.push("超疾風迅雷 (+960)"); }
+                else if (hitterCount["走力"] >= 6) { comboTotal += 600; activatedCombos.push("疾風迅雷 (+600)"); }
 
                 // 条件付きコンボ（投手）
-                if (pitcherCount["球威"] >= 8) { comboTotal += 840; activatedCombos.push("超力戦奮投発動 (+840)"); }
-                else if (pitcherCount["球威"] >= 6) { comboTotal += 480; activatedCombos.push("力戦奮投発動 (+480)"); }
+                if (pitcherCount["球威"] >= 8) { comboTotal += 840; activatedCombos.push("超力戦奮投 (+840)"); }
+                else if (pitcherCount["球威"] >= 6) { comboTotal += 480; activatedCombos.push("力戦奮投 (+480)"); }
 
-                if (pitcherCount["制球"] >= 8) { comboTotal += 840; activatedCombos.push("超正確無比発動 (+840)"); }
-                else if (pitcherCount["制球"] >= 6) { comboTotal += 480; activatedCombos.push("正確無比発動 (+480)"); }
+                if (pitcherCount["制球"] >= 8) { comboTotal += 840; activatedCombos.push("超正確無比 (+840)"); }
+                else if (pitcherCount["制球"] >= 6) { comboTotal += 480; activatedCombos.push("正確無比 (+480)"); }
 
-                if (pitcherCount["スタミナ"] >= 8) { comboTotal += 840; activatedCombos.push("超堅忍不抜発動 (+840)"); }
-                else if (pitcherCount["スタミナ"] >= 6) { comboTotal += 480; activatedCombos.push("堅忍不抜発動 (+480)"); }
+                if (pitcherCount["スタミナ"] >= 8) { comboTotal += 840; activatedCombos.push("超堅忍不抜 (+840)"); }
+                else if (pitcherCount["スタミナ"] >= 6) { comboTotal += 480; activatedCombos.push("堅忍不抜 (+480)"); }
             }
 
             // ステータス80以上の選手をカウント
@@ -2532,7 +2532,7 @@
                 comboTotal += 630;
                 activatedCombos.push("すぽると！ (+630)");
             }
-            if (selectedPlayers.includes("アニバサンタナ") || selectedPlayers.includes("アニバ山田哲人")) {
+            if (selectedPlayers.includes("アニバ村上宗隆") || selectedPlayers.includes("アニバ山田哲人")) {
                 comboTotal += 630;
                 activatedCombos.push("オートグラフ (+630)");
             }
