--- a/index.html
+++ b/index.html
@@ -1409,6 +1409,16 @@
                 "subPositions": [] // 明示的に空配列を追加
             },
 
+             "S2山田哲人": {
+                "type": "野手", "stat1": 64, "stat2": 74, "stat3": 78, "spirits": 5000, "abilities": ["超パワヒ", "プルヒ", "選球眼"], "battingSide": "右",
+                "mainPosition": {
+                    "name": "二塁手",
+                    "適性": 69
+                }, "fielding": { "捕球": 73, "スローイング": 79, "肩力": 65 },
+                "subPositions": [] // 明示的に空配列を追加
+            },
+
+
             "セレ古田敦也": {
                 "type": "野手", "stat1": 81, "stat2": 79, "stat3": 67, "spirits": 4900,
                 "abilities": ["超捕手", "アベレージヒッター", "チャンス"], "battingSide": "右",
