--- a/index.html
+++ b/index.html
@@ -1704,6 +1704,9 @@
             "S1ランバート": {
                 "type": "投手", "stat1": 70, "stat2": 70, "stat3": 70, "spirits": 4900, "abilities": ["超キレ", "打たれ強さ", "奥行き"], "bPitchCount": 0, "mainPosition": { "name": "先" }
             },
+             "S2ランバート": {
+                "type": "投手", "stat1": 72, "stat2": 70, "stat3": 72, "spirits": 5000, "abilities": ["超キレ", "ノビ", "豪速球"], "bPitchCount": 0, "mainPosition": { "name": "先" }
+            },
 
 
             "覚醒中村優斗": {
