--- a/index.html
+++ b/index.html
@@ -1292,6 +1292,14 @@
                 "fielding": { "捕球": 60, "スローイング": 77, "肩力": 82 },
                 "subPositions": [] // 明示的に空配列を追加
             },
+
+             "S2中村悠平": {
+                "type": "野手", "stat1": 65, "stat2": 62, "stat3": 66, "spirits": 5000,
+                "abilities": ["超捕手", "流し打ち", "選球眼"], "battingSide": "右",
+                "mainPosition": { "name": "捕手", "適性": 69 },
+                "fielding": { "捕球": 60, "スローイング": 77, "肩力": 82 },
+                "subPositions": [] // 明示的に空配列を追加
+            },
             "S1長岡秀樹": {
                 "type": "野手", "stat1": 76, "stat2": 69, "stat3": 73, "spirits": 4900, "abilities": ["超流し打ち", "チャンス", "逆境"], "battingSide": "左",
                 "mainPosition": {
